--- a/agent/package.json
+++ b/agent/package.json
@@ -4,7 +4,8 @@
   "dependencies": {
     "ws": "^0",
     "flapjacks": "^0",
-    "blue-ox": "^0"
+    "blue-ox": "^0",
+    "sander": "^0"
   }
 }
 
